// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API it should change scope 1`] = `
<body>
  <div
    id="root"
  >
    
      
    <div
      class="pc-wrapper"
    >
      
        
      <div
        class="pc-container"
      >
        
          
      
        <nav
          class="pc-controls"
        >
          
        
          <button
            class="pc-pointer pc-pointer-left"
            type="button"
          />
          
        
          <button
            class="pc-title"
            type="button"
          >
            January, 2019
          </button>
          
        
          <button
            class="pc-pointer pc-pointer-right"
            type="button"
          />
          
      
        </nav>
        
      
        <div
          class="pc-plate pc-plate-days"
        >
          
        
          <span
            class="pc-cell light"
          >
            Mo
          </span>
          <span
            class="pc-cell light"
          >
            Tu
          </span>
          <span
            class="pc-cell light"
          >
            We
          </span>
          <span
            class="pc-cell light"
          >
            Th
          </span>
          <span
            class="pc-cell light"
          >
            Fr
          </span>
          <span
            class="pc-cell light"
          >
            Sa
          </span>
          <span
            class="pc-cell light"
          >
            Su
          </span>
          
        
          <button
            class="pc-cell light"
            data-pc-timestamp="1546214400000"
          >
            31
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1546300800000"
          >
            1
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1546387200000"
          >
            2
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1546473600000"
          >
            3
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1546560000000"
          >
            4
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1546646400000"
          >
            5
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1546732800000"
          >
            6
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1546819200000"
          >
            7
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1546905600000"
          >
            8
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1546992000000"
          >
            9
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1547078400000"
          >
            10
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1547164800000"
          >
            11
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1547251200000"
          >
            12
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1547337600000"
          >
            13
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1547424000000"
          >
            14
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1547510400000"
          >
            15
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1547596800000"
          >
            16
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1547683200000"
          >
            17
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1547769600000"
          >
            18
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1547856000000"
          >
            19
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1547942400000"
          >
            20
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548028800000"
          >
            21
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548115200000"
          >
            22
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548201600000"
          >
            23
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548288000000"
          >
            24
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548374400000"
          >
            25
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548460800000"
          >
            26
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548547200000"
          >
            27
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548633600000"
          >
            28
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548720000000"
          >
            29
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548806400000"
          >
            30
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548892800000"
          >
            31
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1548979200000"
          >
            1
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1549065600000"
          >
            2
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1549152000000"
          >
            3
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1549238400000"
          >
            4
          </button>
          <button
            class="pc-cell light selected"
            data-pc-timestamp="1549324800000"
          >
            5
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1549411200000"
          >
            6
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1549497600000"
          >
            7
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1549584000000"
          >
            8
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1549670400000"
          >
            9
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1549756800000"
          >
            10
          </button>
          
      
        </div>
        
    
        
      </div>
      
      
    </div>
    
    
  </div>
</body>
`;

exports[`API it should change scope 2`] = `
<body>
  <div
    id="root"
  >
    
      
    <div
      class="pc-wrapper"
    >
      
        
      <div
        class="pc-container"
      >
        
          
      
        <nav
          class="pc-controls"
        >
          
        
          <button
            class="pc-pointer pc-pointer-left"
            type="button"
          />
          
        
          <button
            class="pc-title"
            type="button"
          >
            May, 2019
          </button>
          
        
          <button
            class="pc-pointer pc-pointer-right"
            type="button"
          />
          
      
        </nav>
        
      
        <div
          class="pc-plate pc-plate-days"
        >
          
        
          <span
            class="pc-cell light"
          >
            Mo
          </span>
          <span
            class="pc-cell light"
          >
            Tu
          </span>
          <span
            class="pc-cell light"
          >
            We
          </span>
          <span
            class="pc-cell light"
          >
            Th
          </span>
          <span
            class="pc-cell light"
          >
            Fr
          </span>
          <span
            class="pc-cell light"
          >
            Sa
          </span>
          <span
            class="pc-cell light"
          >
            Su
          </span>
          
        
          <button
            class="pc-cell light"
            data-pc-timestamp="1556496000000"
          >
            29
          </button>
          <button
            class="pc-cell light active"
            data-pc-timestamp="1556582400000"
          >
            30
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1556668800000"
          >
            1
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1556755200000"
          >
            2
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1556841600000"
          >
            3
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1556928000000"
          >
            4
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1557014400000"
          >
            5
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1557100800000"
          >
            6
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1557187200000"
          >
            7
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1557273600000"
          >
            8
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1557360000000"
          >
            9
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1557446400000"
          >
            10
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1557532800000"
          >
            11
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1557619200000"
          >
            12
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1557705600000"
          >
            13
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1557792000000"
          >
            14
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1557878400000"
          >
            15
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1557964800000"
          >
            16
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1558051200000"
          >
            17
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1558137600000"
          >
            18
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1558224000000"
          >
            19
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1558310400000"
          >
            20
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1558396800000"
          >
            21
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1558483200000"
          >
            22
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1558569600000"
          >
            23
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1558656000000"
          >
            24
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1558742400000"
          >
            25
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1558828800000"
          >
            26
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1558915200000"
          >
            27
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1559001600000"
          >
            28
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1559088000000"
          >
            29
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1559174400000"
          >
            30
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1559260800000"
          >
            31
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1559347200000"
          >
            1
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1559433600000"
          >
            2
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1559520000000"
          >
            3
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1559606400000"
          >
            4
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1559692800000"
          >
            5
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1559779200000"
          >
            6
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1559865600000"
          >
            7
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1559952000000"
          >
            8
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1560038400000"
          >
            9
          </button>
          
      
        </div>
        
    
        
      </div>
      
      
    </div>
    
    
  </div>
</body>
`;

exports[`API it should change scope 3`] = `
<body>
  <div
    id="root"
  >
    
      
    <div
      class="pc-wrapper"
    >
      
        
      <div
        class="pc-container"
      >
        
          
      
        <nav
          class="pc-controls"
        >
          
        
          <button
            class="pc-pointer pc-pointer-left"
            type="button"
          />
          
        
          <button
            class="pc-title"
            type="button"
          >
            December, 2020
          </button>
          
        
          <button
            class="pc-pointer pc-pointer-right"
            type="button"
          />
          
      
        </nav>
        
      
        <div
          class="pc-plate pc-plate-days"
        >
          
        
          <span
            class="pc-cell light"
          >
            Mo
          </span>
          <span
            class="pc-cell light"
          >
            Tu
          </span>
          <span
            class="pc-cell light"
          >
            We
          </span>
          <span
            class="pc-cell light"
          >
            Th
          </span>
          <span
            class="pc-cell light"
          >
            Fr
          </span>
          <span
            class="pc-cell light"
          >
            Sa
          </span>
          <span
            class="pc-cell light"
          >
            Su
          </span>
          
        
          <button
            class="pc-cell light"
            data-pc-timestamp="1606694400000"
          >
            30
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1606780800000"
          >
            1
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1606867200000"
          >
            2
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1606953600000"
          >
            3
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1607040000000"
          >
            4
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1607126400000"
          >
            5
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1607212800000"
          >
            6
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1607299200000"
          >
            7
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1607385600000"
          >
            8
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1607472000000"
          >
            9
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1607558400000"
          >
            10
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1607644800000"
          >
            11
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1607731200000"
          >
            12
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1607817600000"
          >
            13
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1607904000000"
          >
            14
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1607990400000"
          >
            15
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1608076800000"
          >
            16
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1608163200000"
          >
            17
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1608249600000"
          >
            18
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1608336000000"
          >
            19
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1608422400000"
          >
            20
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1608508800000"
          >
            21
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1608595200000"
          >
            22
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1608681600000"
          >
            23
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1608768000000"
          >
            24
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1608854400000"
          >
            25
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1608940800000"
          >
            26
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1609027200000"
          >
            27
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1609113600000"
          >
            28
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1609200000000"
          >
            29
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1609286400000"
          >
            30
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1609372800000"
          >
            31
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1609459200000"
          >
            1
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1609545600000"
          >
            2
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1609632000000"
          >
            3
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1609718400000"
          >
            4
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1609804800000"
          >
            5
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1609891200000"
          >
            6
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1609977600000"
          >
            7
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1610064000000"
          >
            8
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1610150400000"
          >
            9
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1610236800000"
          >
            10
          </button>
          
      
        </div>
        
    
        
      </div>
      
      
    </div>
    
    
  </div>
</body>
`;

exports[`API it should change state 1`] = `
<body>
  <div
    id="root"
  >
    
      
    <div
      class="pc-wrapper"
    >
      
        
      <div
        class="pc-container"
      >
        
          
      
        <nav
          class="pc-controls"
        >
          
        
          <button
            class="pc-pointer pc-pointer-left"
            type="button"
          />
          
        
          <button
            class="pc-title"
            type="button"
          >
            February, 2019
          </button>
          
        
          <button
            class="pc-pointer pc-pointer-right"
            type="button"
          />
          
      
        </nav>
        
      
        <div
          class="pc-plate pc-plate-days"
        >
          
        
          <span
            class="pc-cell light"
          >
            Mo
          </span>
          <span
            class="pc-cell light"
          >
            Tu
          </span>
          <span
            class="pc-cell light"
          >
            We
          </span>
          <span
            class="pc-cell light"
          >
            Th
          </span>
          <span
            class="pc-cell light"
          >
            Fr
          </span>
          <span
            class="pc-cell light"
          >
            Sa
          </span>
          <span
            class="pc-cell light"
          >
            Su
          </span>
          
        
          <button
            class="pc-cell light"
            data-pc-timestamp="1548633600000"
          >
            28
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1548720000000"
          >
            29
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1548806400000"
          >
            30
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1548892800000"
          >
            31
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548979200000"
          >
            1
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549065600000"
          >
            2
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549152000000"
          >
            3
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549238400000"
          >
            4
          </button>
          <button
            class="pc-cell selected"
            data-pc-timestamp="1549324800000"
          >
            5
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549411200000"
          >
            6
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549497600000"
          >
            7
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549584000000"
          >
            8
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549670400000"
          >
            9
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549756800000"
          >
            10
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549843200000"
          >
            11
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549929600000"
          >
            12
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550016000000"
          >
            13
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550102400000"
          >
            14
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550188800000"
          >
            15
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550275200000"
          >
            16
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550361600000"
          >
            17
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550448000000"
          >
            18
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550534400000"
          >
            19
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550620800000"
          >
            20
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550707200000"
          >
            21
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550793600000"
          >
            22
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550880000000"
          >
            23
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550966400000"
          >
            24
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1551052800000"
          >
            25
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1551139200000"
          >
            26
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1551225600000"
          >
            27
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1551312000000"
          >
            28
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551398400000"
          >
            1
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551484800000"
          >
            2
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551571200000"
          >
            3
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551657600000"
          >
            4
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551744000000"
          >
            5
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551830400000"
          >
            6
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551916800000"
          >
            7
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1552003200000"
          >
            8
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1552089600000"
          >
            9
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1552176000000"
          >
            10
          </button>
          
      
        </div>
        
    
        
      </div>
      
      
    </div>
    
    
  </div>
</body>
`;

exports[`API it should change state 2`] = `
<body>
  <div
    id="root"
  >
    
      
    <div
      class="pc-wrapper"
    >
      
        
      <div
        class="pc-container"
      >
        
          
      
        <nav
          class="pc-controls"
        >
          
        
          <button
            class="pc-pointer pc-pointer-left"
            type="button"
          />
          
        
          <button
            class="pc-title"
            type="button"
          >
            2019
          </button>
          
        
          <button
            class="pc-pointer pc-pointer-right"
            type="button"
          />
          
      
        </nav>
        
      
        <div
          class="pc-plate pc-plate-months"
        >
          
        
          <button
            class="pc-cell"
            data-pc-timestamp="1546290000000"
          >
            January
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548968400000"
          >
            February
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1551387600000"
          >
            March
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1554066000000"
          >
            April
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1556658000000"
          >
            May
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1559336400000"
          >
            June
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1561928400000"
          >
            Jule
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1564606800000"
          >
            August
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1567285200000"
          >
            September
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1569877200000"
          >
            October
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1572555600000"
          >
            November
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1575147600000"
          >
            December
          </button>
          
      
        </div>
        
    
        
      </div>
      
      
    </div>
    
    
  </div>
</body>
`;

exports[`API it should change state 3`] = `
<body>
  <div
    id="root"
  >
    
      
    <div
      class="pc-wrapper"
    >
      
        
      <div
        class="pc-container"
      >
        
          
      
        <nav
          class="pc-controls"
        >
          
        
          <button
            class="pc-pointer pc-pointer-left"
            type="button"
          />
          
        
          <button
            class="pc-title"
            type="button"
          >
            2010 - 2019
          </button>
          
        
          <button
            class="pc-pointer pc-pointer-right"
            type="button"
          />
          
      
        </nav>
        
      
        <div
          class="pc-plate pc-plate-months"
        >
          
        
          <button
            class="pc-cell"
            data-pc-timestamp="1262293200000"
          >
            2010
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1293829200000"
          >
            2011
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1325361600000"
          >
            2012
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1356984000000"
          >
            2013
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1388520000000"
          >
            2014
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1420059600000"
          >
            2015
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1451595600000"
          >
            2016
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1483218000000"
          >
            2017
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1514754000000"
          >
            2018
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1546290000000"
          >
            2019
          </button>
          
      
        </div>
        
    
        
      </div>
      
      
    </div>
    
    
  </div>
</body>
`;

exports[`API it should change state 4`] = `
<body>
  <div
    id="root"
  >
    
      
    <div
      class="pc-wrapper"
    >
      
        
      <div
        class="pc-container"
      >
        
          
      
        <nav
          class="pc-controls"
        >
          
        
          <button
            class="pc-pointer pc-pointer-left"
            type="button"
          />
          
        
          <button
            class="pc-title"
            type="button"
          >
            February, 2019
          </button>
          
        
          <button
            class="pc-pointer pc-pointer-right"
            type="button"
          />
          
      
        </nav>
        
      
        <div
          class="pc-plate pc-plate-days"
        >
          
        
          <span
            class="pc-cell light"
          >
            Mo
          </span>
          <span
            class="pc-cell light"
          >
            Tu
          </span>
          <span
            class="pc-cell light"
          >
            We
          </span>
          <span
            class="pc-cell light"
          >
            Th
          </span>
          <span
            class="pc-cell light"
          >
            Fr
          </span>
          <span
            class="pc-cell light"
          >
            Sa
          </span>
          <span
            class="pc-cell light"
          >
            Su
          </span>
          
        
          <button
            class="pc-cell light"
            data-pc-timestamp="1548633600000"
          >
            28
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1548720000000"
          >
            29
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1548806400000"
          >
            30
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1548892800000"
          >
            31
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1548979200000"
          >
            1
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549065600000"
          >
            2
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549152000000"
          >
            3
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549238400000"
          >
            4
          </button>
          <button
            class="pc-cell selected"
            data-pc-timestamp="1549324800000"
          >
            5
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549411200000"
          >
            6
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549497600000"
          >
            7
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549584000000"
          >
            8
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549670400000"
          >
            9
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549756800000"
          >
            10
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549843200000"
          >
            11
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1549929600000"
          >
            12
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550016000000"
          >
            13
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550102400000"
          >
            14
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550188800000"
          >
            15
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550275200000"
          >
            16
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550361600000"
          >
            17
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550448000000"
          >
            18
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550534400000"
          >
            19
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550620800000"
          >
            20
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550707200000"
          >
            21
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550793600000"
          >
            22
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550880000000"
          >
            23
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1550966400000"
          >
            24
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1551052800000"
          >
            25
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1551139200000"
          >
            26
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1551225600000"
          >
            27
          </button>
          <button
            class="pc-cell"
            data-pc-timestamp="1551312000000"
          >
            28
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551398400000"
          >
            1
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551484800000"
          >
            2
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551571200000"
          >
            3
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551657600000"
          >
            4
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551744000000"
          >
            5
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551830400000"
          >
            6
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1551916800000"
          >
            7
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1552003200000"
          >
            8
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1552089600000"
          >
            9
          </button>
          <button
            class="pc-cell light"
            data-pc-timestamp="1552176000000"
          >
            10
          </button>
          
      
        </div>
        
    
        
      </div>
      
      
    </div>
    
    
  </div>
</body>
`;
